# CodingFiles

./: README.md
BBDD/: PL-SQLrepaso.sql  Repaso.sql  create.sql
POO/p1/: person-main.cc  person.h
POO/p2/: CMakeLists.txt
POO/p2/src/person/: CMakeLists.txt  person-main.cc  person.cc  person.h
POO/p3/: CMakeLists.txt
POO/p3/src/: CMakeLists.txt
POO/p3/tests/: CMakeLists.txt  person-test.cc
POO/p4/marketplace/src/computer/: CMakeLists.txt
POO/p6/marketplace/tests/: CMakeLists.txt
POO/p7/marketplace/src/person/: CMakeLists.txt  person.h
POO/p7/marketplace/tests/: CMakeLists.txt
POO/p8/: Makefile  contador-unittest  contador.cc  contador.h  ordena.cc  ordena2.cc  ordena3.cc  plantilla.cc  plantilla2.cc
SO/: SO.code-workspace
SO/SO_prac/: hilos  hilos.c  procesos  procesos.c
SO/SO_prac/p1/: a.out  ej1  ej1.c  ej2  ej2.c  ej3  ej3.c  ej4  ej4.c  ej5  ej5.c  ej6  ej6.c  ej7  ej7.c  ej8  ej8.c  ej9-start  ej9-start.c  ej9-stop  ej9-stop.c  factorial  factorial.c
SO/SO_prac/p2/: ej1  ej1.c  ej2  ej2.c  ej3  ej3.c  ej4  ej4.c
SO/SO_prac/p3/: ej2  ej2.c  ej3  ej3.c  ej4  ej4.c
SO/demos/: demo1.c  demo7.c  demo8.c
SO/p1/: a.out  factorial  p1_1.c  p1_2.c  p1_3.c  p1_4.c  p1_5  p1_5-1.c  p1_5-2.c  p1_6.c
SO/p2/: a.out  fichero1.txt  p2_1  p2_1.c  p2_2.c  p2_3.c
SO/p2/demos-20231018/: SAMPLE_FAIL  demo1.c  demo2  demo2.c  demo3  demo3.c  demo4  hello_arg_bad_parameter  sample_OK
SO/p3/: a.out  hebraSC.c  p3_1.c  p3_2.c  p3_4.c  semaphore.txt
SO/p3/demos/: a.out  demo5.c
SO/seniales/: a.out  ej1  ej1.c  ej2  ej2.c  seniales1.c  seniales2.c
(+26 files in other folders)
